# publicus-demo

./: .env.example  .gitignore  CURRENT_SCENARIO_NEXT_PLAN.md  Makefile  README.md  docker-compose.yml  pipeline_exploration.ipynb  project_context.md  pyproject.toml  situation-on-apr-19.md  writeup.md
.claude/: settings.local.json
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/data/processed/: meta.json  programs.parquet  qa_report.json
backend/pipeline/: __main__.py  cache.py  consolidation.py  constants.py  deduplication.py  entity_resolution.py  ingestion.py  intelligence.py  normalization.py  programs_scraper.py  runner.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: flip-stat.tsx  globals.css  layout.tsx  nav.tsx  page.tsx  theme-provider.tsx
frontend/app/map/: page.tsx
frontend/app/programs/: page.tsx
frontend/app/quality/: page.tsx
frontend/app/radar/: page.tsx
frontend/app/recipient/[entity_id]/: page.tsx
frontend/app/timeline/: page.tsx
frontend/lib/: api.ts  charts.tsx
