[project]
name = "grant-radar"
version = "0.2.0"
description = "Competitive grants intelligence pipeline for Canadian government data"
requires-python = ">=3.11"

dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "requests>=2.31",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "rapidfuzz>=3.6",
    "beautifulsoup4>=4.14",
    "lxml>=6.0",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.0",
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
    "ruff>=0.4",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.0",
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
    "ruff>=0.4",
]
