[project]
name = "grant-radar-backend"
version = "0.2.0"
description = "Grant Radar data pipeline and API"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pandas>=2.2",
    "numpy>=1.26",
    "requests>=2.31",
    "rapidfuzz>=3.6",
    "pyarrow>=15.0",
    "beautifulsoup4>=4.14",
    "lxml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline", "app"]
